# libpcre-ts

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  PCRE_ISSUES.md  PCRE_ISSUES_FIXED.md  PLAN.md  README.md  TEST_SUITE_SUMMARY.md  TODO.md  api-reference.js  build.sh  debug-citation.js  debug-conditional.js  debug-error-handling.js  debug-exec-signature.js  debug-invalid.js  debug-phone.js  fix-api.sh  inspect-module.js  package-lock.json  package.json  syntropiq-libpcre-ts-1.3.2.tgz  test-build.js  test-fixes.js  test-functionality.js  test-simple.js  test-worker.js  tsconfig.base.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  vite.config.ts  vitest.config.ts  wasm-wrapper.cpp  wrangler.toml
.github/: dependabot.yml
scripts/: build-cf.sh  build.sh  generate-types.js  init-submodules.sh  preflight.sh
src/: cloudflare-index.js  cloudflare-wrapper.js  enhanced-error-handling.ts  index.js  index.ts
test/: comprehensive.test.js  pcre-vs-js-regex.js  pcre-vs-js-regex.test.js  performance.test.js  real-world.test.js  security.test.js  stress.test.js  test.js
test/modules/: 01-initialization.test.js  02-compilation.test.js  03-basic-matching.test.js  04-unicode.test.js  05-character-classes.test.js  06-quantifiers.test.js  07-anchors.test.js  08-groups.test.js  09-email-validation.test.js  10-constants.test.js  11-lookarounds.test.js  12-advanced-features.test.js  13-error-handling.test.js  14-quick-methods.test.js  15-memory-management.test.js  16-real-world-patterns.test.js
